manifests/cluster-addons/intel-device-plugins/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: inteldeviceplugins-controller-manager
  namespace: inteldeviceplugins-system
spec:
  endpointSelector:
    matchLabels:
      control-plane: controller-manager

  enableDefaultDeny:
    ingress: true
    egress: true

  ingress:
    - fromEntities:
        - remote-node
      toPorts:
        - ports:
            - port: '9443'
              protocol: TCP

  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP
